Add multiple implementations for this exercise to return rolling sum of positions by Acctname,Sub Account Name and Cusip/Symbol.

--- a/data/application.properties
+++ b/data/application.properties
@@ -1,9 +1,11 @@
-bootstrap-servers=kafka.dest.srini.wsn.riskfocus.com:9092
+bootstrap-servers=kafka.dest.srini-jenkins.wsn.riskfocus.com:9092
 #kafka.dest.srini1.wsn.riskfocus.com:9092
 
 # WAM business properties
+#wam.test.ordersPerSec=100000
+#wam.test.testDuration=120000
 wam.test.ordersPerSec=100000
-wam.test.testDuration=30000
+wam.test.testDuration=1200
 
 wam.test.accountsCount=30
 wam.test.subAccountsCount=30
