--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,7 @@ under the License.
 							</filters>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>org.apache.flink.training.assignments.orders.KafkaOrderAssignment</mainClass>
+									<mainClass>org.apache.flink.training.assignments.orders.KafkaOrderAssignment3</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
