--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,7 @@ under the License.
 							</filters>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>org.apache.flink.training.assignments.orders.KafkaOrderAssignment3</mainClass>
+									<mainClass>org.apache.flink.training.assignments.orders.OrderProcessor</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
