--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,11 @@ under the License.
 			<version>1.18.12</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-metrics-dropwizard</artifactId>
+			<version>1.10.1</version>
+		</dependency>
 
 	</dependencies>
 
@@ -177,7 +181,7 @@ under the License.
 							</filters>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>org.apache.flink.training.assignments.orders.OrderProcessor</mainClass>
+									<mainClass>org.apache.flink.training.assignments.orders.PriceProcessor</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
